welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:-6: error: Missing closing brace `}' assumed here
try {
^indexOfValue:1: error: expected class or object definition
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
^indexOfValue:9: error: Missing closing brace `}' assumed here
  return nombre 
  ^