welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var i=0
  var nombre=0
  while(i<nums.length -1){
    if (nums(i)==lookingFor){
     nombre==i
    }
  	i=i+1
  return nombre